<resources>
    <string name="app_name">PColombia</string>
    <string name="correo_validarUsuario">Correo</string>
    <string name="contrasena_validarUsuario">Contraseña</string>
    <string name="registrar_validarUsuario">¿No tienes un usuario?</string>
    <string name="validarButton_validarUsuario">Validar</string>

    <string name="cancelarButton">Cancelar</string> <!--Este se usa en todas, asi que solo puse cancelarButton para que se use en todas -->

    <string name="titulo_gestionarUsuario">Gestionar Usuario</string>
    <string name="nombre_gestionarUsuario">Nombre</string>
    <string name="correo_gestionarUsuario">Correo</string>
    <string name="contrasena_gestionarUsuario">Contraseña</string>
    <string name="rol_gestionarUsuario">Rol</string>
    <string name="editarUsuarioButton_gestionarUsuario">Editar Usuario</string>
    <string name="eliminarUsuarioButton_gestionarUsuario">Eliminar Usuario</string>

    <string name="nombre_gestionarProducto">Nombre</string>
    <string name="estado_gestionarProducto">Estado</string>
    <string name="marca_gestionarProducto">Marca</string>
    <string name="visibilidad_gestionarProducto">Visibilidad</string>
    <string name="precio_gestionarProducto">Precio</string>
    <string name="descripcion_gestionarProducto">Descripción</string>
    <string name="tipo_gestionarProducto">Tipo</string>
    <string name="cantidad_gestionarProducto">Cantidad</string>
    <string name="eliminarProductoButton_gestionarProducto">Eliminar Producto</string>
    <string name="publicarProductoButton_gestionarProducto">Publicar Producto</string>
    <string name="ocultarProductoButton_gestionarProducto">Ocultar Producto</string>
    <string name="editarProductoButton_gestionarProducto">Editar Producto</string>
    <string name="comentariosProductoButton_gestionarProducto">Comentarios</string>

    <string name="titulo_misProductos">Mis Productos</string>
    <string name="gestionarUsuario_misProductos">Gestionar Usuario</string>
    <string name="registrarProducto_misProductos">Registrar Producto</string>
    <string name="salir_misProductos">Salir</string>

    <string name="marca_productoFragment">Marca</string>
    <string name="precio_productoFragment">Precio</string>
    <string name="estado_productoFragment">Estado</string>
    <string name="visibilidad_productoFragment">Visibilidad</string>
    <string name="gestionarButton_productoFragment">Gestionar</string>

    <string name="nombre_crearUsuario">Nombre</string>
    <string name="correo_crearUsuario">Correo</string>
    <string name="contrasena_crearUsuario">Contraseña</string>
    <string name="rol_crearUsuario">Rol</string>
    <string name="crearButton_crearUsuario">Crear</string>

    <string name="nombre_editarProducto">Nombre</string>
    <string name="marca_editarProducto">Marca</string>
    <string name="precio_editarProducto">Precio</string>
    <string name="tipo_editarProducto">Tipo</string>
    <string name="cantidad_editarProducto">Cantidad</string>
    <string name="descripcion_editarProducto">Descripción</string>
    <string name="editarButton_editarProducto">Editar</string>

    <string name="nombre_editarUsuario">Nombre</string>
    <string name="contrasena_editarUsuario">Contraseña</string>
    <string name="editarButton_editarUsuario">Editar</string>

    <string name="nombre_registrarProducto">Nombre</string>
    <string name="marca_registrarProducto">Marca</string>
    <string name="precio_registrarProducto">Precio</string>
    <string name="tipo_registrarProducto">Tipo</string>
    <string name="cantidad_registrarProducto">Cantidad</string>
    <string name="descripcion_registrarProducto">Descripción</string>
    <string name="registrarButton_registrarProducto">Registrar</string>

    <string name="titulo_editarProducto">Editar Producto</string>
    <string name="titulo_gestionarProducto">Gestionar Producto</string>
    <string name="titulo_registrarProducto">Registrar Producto</string>
    <string name="titulo_crearUsuario">Crear Usuario</string>
    <string name="titulo_editarUsuario">Editar Usuario</string>
    <string-array name="rolUsuarioItems">
        <item>Cliente</item>
        <item>Vendedor</item>
    </string-array>
    <string-array name="tipoProductoItems">
        <item>PC</item>
        <item>Portatil</item>
        <item>CPU</item>
        <item>RAM</item>
        <item>Disco Duro</item>
        <item>FAN</item>
        <item>SSD</item>
        <item>Placa madre</item>
        <item>Fuente de poder</item>
        <item>Mouse</item>
        <item>Teclado</item>
        <item>Monitor</item>
        <item>Otro</item>
    </string-array>
</resources>