<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.producto.EditarProductoActivity"
    tools:visibility="visible">>

    <TextView
        android:id="@+id/nombre_editarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nombre_editarProducto"
        app:layout_constraintStart_toStartOf="@+id/nombreTextView_editarProducto"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreTextView_editarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_editarProducto" />

    <TextView
        android:id="@+id/marca_editarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/marca_editarProducto"
        app:layout_constraintStart_toStartOf="@+id/marcaTextView_editarProducto"
        app:layout_constraintTop_toBottomOf="@+id/nombreTextView_editarProducto" />

    <EditText
        android:id="@+id/marcaTextView_editarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marca_editarProducto" />

    <TextView
        android:id="@+id/precio_editarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/precio_editarProducto"
        app:layout_constraintStart_toStartOf="@+id/precioTextView_editarProducto"
        app:layout_constraintTop_toBottomOf="@+id/marcaTextView_editarProducto" />

    <EditText
        android:id="@+id/precioTextView_editarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precio_editarProducto" />

    <TextView
        android:id="@+id/tipo_editarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tipo_editarProducto"
        app:layout_constraintStart_toStartOf="@+id/tipoSpinner_editarProducto"
        app:layout_constraintTop_toBottomOf="@+id/precioTextView_editarProducto" />

    <TextView
        android:id="@+id/cantidad_editarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cantidad_editarProducto"
        app:layout_constraintStart_toStartOf="@+id/cantidadTextView_editarProducto"
        app:layout_constraintTop_toBottomOf="@+id/tipoSpinner_editarProducto" />

    <EditText
        android:id="@+id/cantidadTextView_editarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad_editarProducto" />

    <TextView
        android:id="@+id/descripcion_editarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/descripcion_editarProducto"
        app:layout_constraintStart_toStartOf="@+id/descripcionTextView_editarProducto"
        app:layout_constraintTop_toBottomOf="@+id/cantidadTextView_editarProducto" />

    <EditText
        android:id="@+id/descripcionTextView_editarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_editarProducto" />

    <Button
        android:id="@+id/cancelarButton_editarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="cancelar"
        android:text="@string/cancelarButton"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editarButton_editarProducto"
        app:layout_constraintTop_toBottomOf="@+id/descripcionTextView_editarProducto"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/editarButton_editarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="editarProducto"
        android:text="@string/editarButton_editarProducto"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelarButton_editarProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionTextView_editarProducto" />

    <Spinner
        android:id="@+id/tipoSpinner_editarProducto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipo_editarProducto" />

</androidx.constraintlayout.widget.ConstraintLayout>