<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.producto.RegistrarProductoActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/nombre_registrarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nombre_registrarProducto"
        app:layout_constraintStart_toStartOf="@+id/nombreTextView_registrarProducto"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreTextView_registrarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_registrarProducto" />

    <TextView
        android:id="@+id/marca_registrarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/marca_registrarProducto"
        app:layout_constraintStart_toStartOf="@+id/marcaTextView_registrarProducto"
        app:layout_constraintTop_toBottomOf="@+id/nombreTextView_registrarProducto" />

    <EditText
        android:id="@+id/marcaTextView_registrarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marca_registrarProducto" />

    <TextView
        android:id="@+id/precio_registrarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/precio_registrarProducto"
        app:layout_constraintStart_toStartOf="@+id/precioTextView_registrarProducto"
        app:layout_constraintTop_toBottomOf="@+id/marcaTextView_registrarProducto" />

    <EditText
        android:id="@+id/precioTextView_registrarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precio_registrarProducto" />

    <TextView
        android:id="@+id/tipo_registrarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tipo_registrarProducto"
        app:layout_constraintStart_toStartOf="@+id/tipoSpinner_registrarProducto"
        app:layout_constraintTop_toBottomOf="@+id/precioTextView_registrarProducto" />

    <TextView
        android:id="@+id/cantidad_registrarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cantidad_registrarProducto"
        app:layout_constraintStart_toStartOf="@+id/cantidadTextView_registrarProducto"
        app:layout_constraintTop_toBottomOf="@+id/tipoSpinner_registrarProducto" />

    <EditText
        android:id="@+id/cantidadTextView_registrarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantidad_registrarProducto" />

    <TextView
        android:id="@+id/descripcion_registrarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/descripcion_registrarProducto"
        app:layout_constraintStart_toStartOf="@+id/descripcionTextView_registrarProducto"
        app:layout_constraintTop_toBottomOf="@+id/cantidadTextView_registrarProducto" />

    <EditText
        android:id="@+id/descripcionTextView_registrarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_registrarProducto" />

    <Button
        android:id="@+id/cancelarButton_registrarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/cancelarButton"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registrarButton_registrarProducto"
        app:layout_constraintTop_toBottomOf="@+id/descripcionTextView_registrarProducto" />

    <Button
        android:id="@+id/registrarButton_registrarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="registrarProducto"
        android:text="@string/registrarButton_registrarProducto"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelarButton_registrarProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionTextView_registrarProducto" />

    <Spinner
        android:id="@+id/tipoSpinner_registrarProducto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipo_registrarProducto" />


</androidx.constraintlayout.widget.ConstraintLayout>